--- a/ZProyecto Calculadora SET/style.css
+++ b/ZProyecto Calculadora SET/style.css
@@ -19,6 +19,8 @@ body {
   width: 300px;
   padding: 10px;
   margin-top: 5px;
+  direction: rtl;
+  font-family: 'Open Sans', sans-serif;
   grid-column-start: 1;
   grid-column-end: one;
   grid-row-start: row1-start;
